GNOME Bugzilla – Bug 669455
V4l2src can't open webcamstudio new vloopback
Last modified: 2012-02-16 13:02:21 UTC
Created attachment 206870 [details] [review] Small patch to add EINVAL to if Because vlooback emits 25 - ENOTTY and no EINVAL v4l2src thought it can't handle this and does not work. Attached very small patch makes system fuctional again in other words everything runs smooth again.
Seems sensible from the description of ENOTTY in errno's man page. Can you make a git patch with this please ?
Pushed, thanks for the patch (git format-patch format is generally prefered though): commit ef37bb48bc6093c218271cf49ff063f57b6f0207 Author: Tuukka Pasanen <tuukka.pasanen@ilmi.fi> Date: Thu Feb 16 12:59:10 2012 +0000 v4l2src: fix for webcamstudio vloopback Because vlooback emits 25 - ENOTTY and no EINVAL v4l2src thought it can't handle this and does not work. https://bugzilla.gnome.org/show_bug.cgi?id=669455