v4l2src: fix for webcamstudio vloopback

Because vlooback emits 25 - ENOTTY and no EINVAL v4l2src thought it
can't handle this and does not work.

https://bugzilla.gnome.org/show_bug.cgi?id=669455